--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,10 @@
      background-color: #512DA8;
  }
 
+ .modal {
+     color: black;
+ }
+
 .tab-content {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
